# scadable-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pipeline-smoke.yml  release.yml
docs/: architecture.md  cli.md  dsl-reference.md  error-catalog.md  generators.md  getting-started.md  migrating-from-v0.1.md  modbus-tcp.md  pi_smoke_runbook.md  protocols.md  targets.md  testing.md
examples/01_basic_sensor/: README.md  sim.yaml
examples/01_basic_sensor/devices/: temp_sensor.py
examples/02_multi_register/: README.md
examples/02_multi_register/devices/: temp_pressure_sensor.py
examples/03_multiple_protocols/: README.md
examples/03_multiple_protocols/devices/: ble_env_sensor.py  gpio_door.py  modbus_plc.py
examples/04_basic_controller/: README.md
examples/04_basic_controller/controllers/: temp_monitor.py
examples/04_basic_controller/devices/: line_sensor.py
examples/05_controller_triggers/: README.md
examples/05_controller_triggers/controllers/: multi_trigger.py
examples/05_controller_triggers/devices/: line_sensor.py  motor_drive.py
examples/06_storage/: README.md  storage.py
examples/06_storage/controllers/: data_logger.py
examples/06_storage/devices/: line_sensor.py
examples/07_historian_and_ota/: README.md
examples/07_historian_and_ota/devices/: smart_sensor.py
examples/08_pid_control/: README.md
examples/08_pid_control/controllers/: boiler_controller.py
examples/08_pid_control/devices/: boiler.py  temp_probe.py
examples/09_state_machine/: README.md
examples/09_state_machine/controllers/: calibration.py
examples/09_state_machine/devices/: ph_sensor.py
examples/10_ml_inference/: README.md
examples/10_ml_inference/devices/: motor_drive.py
examples/11_routes_and_uploads/: README.md  routes.py
examples/12_lifecycle_manager/: README.md
examples/13_multi_device_correlation/: README.md  routes.py  storage.py
examples/14_full_factory/: README.md  fleet.toml  routes.py  storage.py
scadable/: __init__.py  _capabilities.yaml  _registry.py  _targets.py  control.py  core.py  manifest.py  models.py  ota.py  protocols.py  registers.py  routes.py  storage.py  system.py  time.py  topics.py  triggers.py
scadable/cli/: add_cmd.py  compile_cmd.py  init_cmd.py  main.py  sim_cmd.py  verify_cmd.py
scadable/compiler/: __init__.py  _capabilities.py  _drivers.py  discover.py  emitter.py  memory.py  parser.py  validator.py
scadable/sim/: __init__.py  modbus_sim.py
scadable_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_manifest.py  test_storage_preview.py
tests/cli/: test_cli.py
tests/compiler/: test_capabilities.py  test_contract_emit.py  test_drivers.py
tests/emitter/: test_emitter.py  test_esp32.py
tests/examples/: test_examples.py
tests/integration/: test_full_pipeline.py
tests/parser/: test_connections.py  test_edge_cases.py  test_registers.py  test_triggers.py
tests/portability/: test_portability.py
tests/smoke/: test_pipeline_smoke.py
tests/validator/: test_validator.py
(+21 files in other folders)
