[project]
name = "scadable-sdk"
version = "0.1.0"
description = "Scadable Edge SDK — write device logic in Python, compile to native"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12",
    "jinja2>=3.0",
    "toml>=0.10",
    "rich>=13.0",
]

[project.scripts]
scadable = "scadable.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
